...
    android:paddingTop="2dp"
    android:orientation="vertical"
    tools:context=".AfterLoginActivity">


    <Button
        android:id="@+id/btn_object_detection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:backgroundTint="#c0392b"
        android:fontFamily="@font/acme_regular"
        android:text="Object Detection Mode"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="30dp" />


    <Button
        android:id="@+id/btn_AR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#2980b9"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:fontFamily="@font/acme"
...
