...
        android:text="ID"
      />



    <Button
        android:id="@+id/button_sign_out"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Sign Out"
        android:fontFamily="@font/acme"
        android:textColor="#fff"
        android:backgroundTint="#e74c3c"
...
